--- a/Ch10.系统级IO.md
+++ b/Ch10.系统级IO.md
@@ -11,8 +11,10 @@
   * 2：标准错误
 * 文件描述符表、打开文件表和v-node表。
   * 描述符表。一个进程一个。fork()创建的子进程则是拷贝描述符表，共享相同的打开文件表，引用计数会+1，所以fork是有代价的，每个子进程需要close文件，才能从真正意义上关闭它。
-  * 打开文件表。所有进程共享。open两次，会有2个描述符，对应2个文件表（读写不同的位置）；
-  * v-node表。所有进程共享。一个文件只有一个。
-
-* I/O重定向，通过dup2(oldfd,newfd) 系统调用实现，底层拷贝文件描述符。
+  * 打开文件表，所有进程共享，带有文件位置信息和引用计数。open两次，会有2个描述符，对应2个文件表（读写不同的位置）；
+  * v-node表（文件元数据）。所有进程共享。一个文件只有一个。
+* fork创建子进程时，会拷贝描述符表，但共享打开文件表。
+* I/O重定向，通过dup2(oldfd,newfd)（复制文件描述符，把oldfd拷贝到newfd） 系统调用实现，底层拷贝文件描述符。
+  * Dup2(4,1)。把标准输出描述符替换为4的文件描述符，即1指向4对应的打开文件表。实现输出重定向。
 * C标准I/O接口，都是带缓冲区的实现，可减少底层read/write的系统调用。（数据先读写缓冲区，遇到换行符才调用）
+
